<resources>
    <string name="app_name">B.E.F</string>
    <string name="login">تسجيل دخول</string>
    <string name="user_name">إسم المستخدم</string>
    <string name="password">كلمة المرور</string>
    <string name="checkNetworkConnection">لا يوجد إتصال بالانترنت</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone">"رقم الهاتف "</string>
    <string name="username">إسم العميل</string>
    <string name="userphone">رقم الهاتف</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="address">العنوان</string>
    <string name="update">تعديل</string>
    <string name="car_number">رقم السيارة</string>
    <string name="national_num">الرقم القومي</string>
    <string name="phone2">رقم الهاتف الاخر</string>
    <string name="add">إضافة</string>
    <string name="title_activity_maps">Map</string>
    <string name="print">طباعة</string>
    <string name="code">كود النظام</string>
</resources>