<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="addclientviewmodel"
            type="com.mz.bf.addclient.AddClientViewModel" />
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".addclient.AddClientActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bf_cover">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/purple_500">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_baseline_chevron"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:onClick="Back"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_bold"
                    android:text="إضافة عميل"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/logo2"
                android:layout_marginTop="@dimen/_10sdp"/>
            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/username"
                android:textColorHint="@color/lightsilver"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/_14ssp"
                android:gravity="center"
                android:fontFamily="@font/cairo_semibold"
                android:textStyle="normal"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:background="@drawable/txt_login_background"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:elevation="@dimen/_5sdp"/>
            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/userphone"
                android:textColorHint="@color/lightsilver"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/_14ssp"
                android:gravity="center"
                android:fontFamily="@font/cairo_semibold"
                android:textStyle="normal"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:background="@drawable/txt_login_background"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:inputType="number"
                android:elevation="@dimen/_3sdp"/>
            <EditText
                android:id="@+id/et_phone2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/phone2"
                android:textColorHint="@color/lightsilver"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/_14ssp"
                android:gravity="center"
                android:fontFamily="@font/cairo_semibold"
                android:textStyle="normal"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:background="@drawable/txt_login_background"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:inputType="number"
                android:elevation="@dimen/_5sdp" />
            <EditText
                android:id="@+id/et_national_num"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/national_num"
                android:textColorHint="@color/lightsilver"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/_14ssp"
                android:gravity="center"
                android:fontFamily="@font/cairo_semibold"
                android:textStyle="normal"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:background="@drawable/txt_login_background"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:inputType="number"
                android:elevation="@dimen/_5sdp" />
            <Spinner
                android:id="@+id/govern_spinner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/spinner_item_bg"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textAlignment="textStart"
                android:elevation="@dimen/_5sdp"/>
            <Spinner
                android:id="@+id/city_spinner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/spinner_item_bg"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textAlignment="textStart"
                android:elevation="@dimen/_5sdp"/>
            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/address"
                android:textColorHint="@color/lightsilver"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/_14ssp"
                android:gravity="center"
                android:fontFamily="@font/cairo_semibold"
                android:textStyle="normal"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:background="@drawable/txt_login_background"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:inputType="text"
                android:elevation="@dimen/_5sdp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:background="@drawable/btn_login_background"
                app:layout_constraintTop_toBottomOf="@+id/input_layout"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="@dimen/_16ssp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_20sdp"
                android:elevation="@dimen/_10sdp"
                android:fontFamily="@font/cairo_bold"
                android:onClick="addclient"
                android:text="@string/add"
                android:backgroundTint="@null"
                android:layout_marginBottom="@dimen/_50sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp" />
        </LinearLayout>
    </ScrollView>
    </LinearLayout>
</layout>