<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".profile.ProfileFragment"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">
                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="@dimen/_120sdp"
                        android:paddingRight="@dimen/_10sdp"
                        android:paddingLeft="@dimen/_10sdp"
                        app:cardCornerRadius="@dimen/_120sdp"
                        app:cardBackgroundColor="@color/white"
                        app:cardElevation="@dimen/_1sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_gravity="center_horizontal">
                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/user_img"
                            android:layout_width="@dimen/_120sdp"
                            android:layout_height="@dimen/_120sdp"
                            android:background="@drawable/user_image"/>
                        <ImageButton
                            android:id="@+id/btn_choose_img"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:background="@color/btn_color"
                            android:textColor="@color/white"
                            android:src="@drawable/ic_baseline_camera"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:layout_marginTop="100dp"
                            android:fontFamily="@font/cairo_semibold"
                            android:textSize="20sp" />
                    </androidx.cardview.widget.CardView>
                </FrameLayout>
                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:drawableStart="@drawable/ic_baseline_person"
                    android:hint="@string/username"
                    android:textColorHint="@color/lightsilver"
                    android:textColor="@color/lightsilver"
                    android:textSize="@dimen/_14ssp"
                    android:gravity="center"
                    android:fontFamily="@font/cairo_semibold"
                    android:textStyle="normal"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:background="@drawable/txt_login_background"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:drawableLeft="@drawable/ic_baseline_person"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:elevation="@dimen/_3sdp"/>
                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:drawableStart="@drawable/ic_baseline_phone"
                    android:hint="@string/userphone"
                    android:textColorHint="@color/lightsilver"
                    android:textColor="@color/lightsilver"
                    android:textSize="@dimen/_14ssp"
                    android:gravity="center"
                    android:fontFamily="@font/cairo_semibold"
                    android:textStyle="normal"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:background="@drawable/txt_login_background"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:drawableLeft="@drawable/ic_baseline_phone"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:inputType="number"
                    android:elevation="@dimen/_3sdp"/>
                <EditText
                    android:id="@+id/et_car_num"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:hint="@string/car_number"
                    android:textColorHint="@color/lightsilver"
                    android:textColor="@color/lightsilver"
                    android:textSize="@dimen/_14ssp"
                    android:gravity="center"
                    android:fontFamily="@font/cairo_semibold"
                    android:textStyle="normal"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:background="@drawable/txt_login_background"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:inputType="number"
                    android:elevation="@dimen/_3sdp"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    app:passwordToggleEnabled="true"
                    app:hintEnabled="false"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/txt_login_background">
                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:textSize="@dimen/_14ssp"
                        android:gravity="center"
                        android:textStyle="normal"
                        android:inputType="textPassword"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:fontFamily="@font/cairo_semibold"
                        android:textColor="@color/lightsilver"
                        android:textColorHint="@color/lightsilver"
                        android:drawableStart="@drawable/ic_baseline_lock"
                        app:passwordToggleEnabled="true"
                        android:elevation="@dimen/_3sdp"
                        android:background="@android:color/transparent"/>
                </com.google.android.material.textfield.TextInputLayout>
                <EditText
                    android:id="@+id/et_national_num"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:drawableStart="@drawable/ic_baseline_location_on"
                    android:hint="الرقم القومي"
                    android:textColorHint="@color/lightsilver"
                    android:textColor="@color/lightsilver"
                    android:textSize="@dimen/_14ssp"
                    android:gravity="center"
                    android:fontFamily="@font/cairo_semibold"
                    android:textStyle="normal"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:background="@drawable/txt_login_background"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:elevation="@dimen/_3sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:inputType="number"/>
                <Button
                    android:id="@+id/btn_add"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:textSize="@dimen/_16ssp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/cairo_bold"
                    android:textStyle="bold"
                    android:background="@drawable/btn_login_background"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:text="@string/update" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>