<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="loginviewmodel"
            type="com.mz.bf.authentication.LoginViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".authentication.LoginActivity">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="#f0f0f0">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <ImageView
                    android:id="@+id/logo_img"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_150sdp"
                    android:background="@drawable/logo2"
                    android:layout_marginTop="@dimen/_70sdp"
                    android:scaleType="centerCrop"
                    app:layout_constraintVertical_bias="0.0"/>
                <EditText
                    android:id="@+id/et_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:background="@drawable/txt_login_background"
                    app:layout_constraintTop_toBottomOf="@+id/logo_img"
                    android:hint="@string/user_name"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/_13ssp"
                    android:gravity="center"
                    android:textStyle="normal"
                    android:fontFamily="@font/cairo_semibold"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:elevation="@dimen/_5sdp"
                    android:drawableRight="@drawable/ic_baseline_person"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingStart="@dimen/_10sdp" />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    app:layout_constraintTop_toBottomOf="@+id/et_user_name"
                    android:id="@+id/input_layout"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/purple_500"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:background="@drawable/txt_login_background"
                    android:elevation="@dimen/_5sdp"
                    app:hintEnabled="false"
                    app:boxBackgroundMode="none"
                    app:errorEnabled="true"
                    android:layout_marginBottom="@dimen/_5sdp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/password"
                        android:textSize="@dimen/_13ssp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:textStyle="normal"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/cairo_semibold"
                        android:textColorHint="@color/grey"
                        app:passwordToggleEnabled="true" />

                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:background="@drawable/btn_login_background"
                    app:layout_constraintTop_toBottomOf="@+id/input_layout"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textSize="@dimen/_16ssp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:elevation="@dimen/_10sdp"
                    android:fontFamily="@font/cairo_bold"
                    android:onClick="Login"
                    android:text="@string/login"
                    android:backgroundTint="@null"
                    android:layout_marginBottom="@dimen/_50sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
